# chesscom

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  DESIGN-REVIEW.md  README.md  club_member_data.py  match_strengthening_extract.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/assess-accessibility/: SKILL.md
.claude/skills/assess-api-design/: SKILL.md
.claude/skills/assess-architecture/: SKILL.md
.claude/skills/assess-aws-well-architected/: SKILL.md
.claude/skills/assess-ci-cd/: SKILL.md
.claude/skills/assess-code-quality/: SKILL.md
.claude/skills/assess-cost-optimisation/: SKILL.md
.claude/skills/assess-full/: SKILL.md
.context/: index.md
.context/conventions/: code.md  communication.md  workflow.md
.context/standards/: accessibility.md  api-design.md  architecture.md  aws-well-architected.md  ci-cd.md  code-quality.md  cost-optimisation.md  gdpr.md  iac.md  observability.md  operational-excellence.md  pci-dss.md  performance.md  resilience.md  security.md  tech-debt.md  testing.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  main.yml
src/: club_contribution_report.py  club_member_data.py  generate_club_member_report.py  generate_prospect_data.py  match_strengthening_extract.py
src/chesscom/: __main__.py  cli.py  config.py
src/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_api_calls.py  test_chess_com_client.py
tests/unit/: test_calculations.py  test_cli.py  test_config.py  test_excel.py  test_models.py  test_reports.py  test_services.py
(+106 files in other folders)
